--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,12 +131,12 @@ dependencies {
 }
 
 bugly {
-    appId = '900060174' // 注册时分配的App ID
-    appKey = 'Se1ulsmMdxsedS21' // 注册时分配的App Key
+    appId = rootProject.ext.bugly_appid
+    appKey = rootProject.ext.bugly_appkey
 }
 
 walle {
     apkOutputFolder = new File("${project.buildDir}/outputs/channels");
-    apkFileNameFormat = 'xiaojs_${buildType}_${channel}_v${versionName}_${versionCode}.apk';
-    channelFile = "./channel";
+    apkFileNameFormat = rootProject.ext.release_name_format;
+    channelFile = rootProject.ext.channel_dir;
 }
