--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,10 @@ dependencies {
     compile files('libs/open_sdk_r5781_lite.jar')
     //
     compile files('libs/AMap_Location_V3.3.0_20170118.jar')
+    compile files('libs/SocialSDK_WeChat_Simplify.jar')
+    compile files('libs/umeng_social_api.jar')
+    compile files('libs/umeng_social_net.jar')
+    compile files('libs/umeng_social_tool.jar')
     //pay
     //build apk
     //gaode
