--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,10 @@
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         </activity>
         <activity
+                android:name=".ui.account.BindThirdAccountActivity"
+                android:screenOrientation="portrait">
+        </activity>
+        <activity
                 android:name=".ui.account.ForgetPasswordStepOneActivity"
                 android:screenOrientation="portrait"/>
         <activity
@@ -119,6 +123,9 @@
                 android:screenOrientation="portrait"/>
         <activity
                 android:name=".ui.lesson.MyLessonActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.xclass.LessonScheduleActivity"
                 android:screenOrientation="portrait"/>
         <activity android:name=".ui.lesson.LessonCreationActivity"/>
         <activity
