--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,9 @@ dependencies {
     compile project(':3d_wheelpicker')
     compile project(':qrcode')
     compile files('libs/android-support-v7-recyclerview.jar')
+
+    compile project(':calendar')
+
     //flex layout
     //qiniu
     //crash report
@@ -89,6 +92,7 @@ dependencies {
     compile files('libs/umeng_social_api.jar')
     compile files('libs/umeng_social_net.jar')
     compile files('libs/umeng_social_tool.jar')
+    compile files('libs/SocialSDK_QQ_Full.jar')
     //pay
     //build apk
     //gaode
