班和课表界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -133,6 +133,9 @@
                 android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"/>
         <activity
+            android:name=".ui.lesson.xclass.ClassScheduleActivity"
+            android:screenOrientation="portrait"/>
+        <activity
             android:name=".ui.lesson.TeachingSubjectSearchActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysVisible|adjustPan"/>
