--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -127,6 +127,9 @@
         <activity
                 android:name=".ui.lesson.xclass.LessonScheduleActivity"
                 android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.xclass.SearchLessonActivity"
+                android:screenOrientation="portrait"/>
         <activity android:name=".ui.lesson.LessonCreationActivity"/>
         <activity
                 android:name=".ui.lesson.TeachingSubjectActivity"
