--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -324,6 +324,8 @@
         <activity android:name=".ui.lesson.EnrollSuccessActivity"/>
         <activity android:name=".ui.lesson.xclass.AddStudentActivity"
                 android:screenOrientation="portrait"/>
+        <activity android:name=".ui.lesson.xclass.VerificationActivity"
+                  android:screenOrientation="portrait"/>
         <!-- QQ -->
         <activity
                 android:name="com.tencent.tauth.AuthActivity"
