--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,7 +83,8 @@
         </activity>
         <activity
                 android:name=".ui.account.BindThirdAccountActivity"
-                android:screenOrientation="portrait">
+                android:screenOrientation="portrait"
+                >
         </activity>
         <activity
                 android:name=".ui.account.ForgetPasswordStepOneActivity"
