Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ android {
 dependencies {
 
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.umeng.analytics:analytics:latest.integration'
 
     //compile 'com.google.zxing:core:3.3.0'
 
