Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -326,6 +326,9 @@
                   android:screenOrientation="portrait"/>
         <activity android:name=".ui.lesson.xclass.VerificationActivity"
                   android:screenOrientation="portrait"/>
+        <activity android:name=".ui.lesson.xclass.EditTimetableActivity"
+                  android:screenOrientation="portrait"
+                />
         <!-- QQ -->
         <activity
                 android:name="com.tencent.tauth.AuthActivity"
