--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -123,6 +123,9 @@
                 android:name=".ui.account.ModifyPasswordActivity"
                 android:screenOrientation="portrait"/>
         <activity
+                android:name=".ui.CommonWebActivity"
+                android:screenOrientation="portrait"/>
+        <activity
                 android:name=".ui.lesson.MyLessonActivity"
                 android:screenOrientation="portrait"/>
         <activity
@@ -515,6 +518,11 @@
 
         <service android:name="com.amap.api.location.APSService"/>
 
+        <!--友盟-->
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="592f92426e27a41dc2001d26" >
+        </meta-data>
 
     </application>
 
