--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -137,7 +137,9 @@
         <activity
                 android:name=".ui.lesson.xclass.SearchClassActivity"
                 android:screenOrientation="portrait"/>
-        <activity android:name=".ui.lesson.LessonCreationActivity"/>
+        <activity android:name=".ui.lesson.LessonCreationActivity"
+            android:screenOrientation="portrait"
+            />
         <activity
                 android:name=".ui.lesson.TeachingSubjectActivity"
                 android:screenOrientation="portrait"
@@ -305,7 +307,7 @@
                   android:screenOrientation="portrait"/>
         <activity android:name=".ui.common.PlayStreamingActivity"/>
         <activity android:name=".ui.lesson.xclass.CreateClassActivity"
-                  android:windowSoftInputMode="stateAlwaysHidden"
+                  android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
                   android:screenOrientation="portrait"/>
         <activity android:name=".ui.lesson.xclass.CreateTimetableActivity"
                   android:windowSoftInputMode="stateAlwaysHidden"
