--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,8 +79,8 @@ dependencies {
     compile project(':qrcode')
     compile project(':calendar')
 
-    compile 'io.reactivex.rxjava2:rxjava:2.1.1'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+//    compile 'io.reactivex.rxjava2:rxjava:2.1.1'
+//    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.orhanobut:logger:1.15'
     compile 'com.umeng.analytics:analytics:latest.integration'
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
