--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     compile project(':3d_wheelpicker')
     compile project(':qrcode')
     compile project(':calendar')
+    compile project(':DragSortListview')
 
 //    compile 'io.reactivex.rxjava2:rxjava:2.1.1'
 //    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
