--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -268,6 +268,11 @@
             </intent-filter>
         </activity>
 
+
+        <activity android:name=".ui.recordlesson.RecordedLessonActivity"
+            android:screenOrientation="portrait"
+            />
+
         <activity
                 android:name=".TestActivity"
                 android:screenOrientation="landscape"
