--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -272,6 +272,13 @@
         <activity android:name=".ui.recordlesson.RecordedLessonActivity"
             android:screenOrientation="portrait"
             />
+        <activity android:name=".ui.recordlesson.SelectDirectoryActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity android:name=".ui.recordlesson.AddLessonDirActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateHidden"
+            />
 
         <activity
                 android:name=".TestActivity"
