录播课新页面些

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -283,6 +283,9 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateHidden"
             />
+        <activity android:name=".ui.recordlesson.RLDirListActivity"
+            android:screenOrientation="portrait"
+            />
 
         <activity
                 android:name=".TestActivity"
