--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -369,6 +369,12 @@
                 />
         <activity android:name=".ui.recordlesson.RecordedLessonEnrollActivity"
                 android:screenOrientation="portrait"/>
+        <activity android:name=".ui.recordlesson.EnrolledStudentsActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.recordlesson.EnrolledStudentInfoActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.recordlesson.ManualRegistrationActivity"
+                  android:screenOrientation="portrait"/>
         <!-- QQ -->
         <activity
                 android:name="com.tencent.tauth.AuthActivity"
