调整录播课管理

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -286,6 +286,9 @@
         <activity android:name=".ui.recordlesson.RLDirListActivity"
             android:screenOrientation="portrait"
             />
+        <activity android:name=".ui.recordlesson.SearchRecordedLessonActivity"
+            android:screenOrientation="portrait"
+            />
 
         <activity
                 android:name=".TestActivity"
