开录播课bug；操作刷新；ui调整

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -290,6 +290,10 @@
             android:screenOrientation="portrait"
             />
 
+        <activity android:name=".ui.recordlesson.EnrollConfirmActivity"
+            android:screenOrientation="portrait"
+            />
+
         <activity
                 android:name=".TestActivity"
                 android:screenOrientation="landscape"
