录播课筛选调整；列表数据容错；录播课报名成功页

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -301,6 +301,9 @@
         <activity android:name=".ui.recordlesson.EnrollConfirmActivity"
             android:screenOrientation="portrait"
             />
+        <activity android:name=".ui.recordlesson.EnrollRLessonSuccessActivity"
+            android:screenOrientation="portrait"
+            />
 
         <activity
                 android:name=".TestActivity"
