--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+
         <activity
                 android:name=".ui.SplashActivity"
                 android:theme="@style/SplashTheme"
@@ -562,6 +563,14 @@
                 <category android:name="cn.xiaojs.xma"/>
             </intent-filter>
         </receiver>
+
+        <!-- bugly-->
+        <meta-data
+                android:name="BUGLY_APPID"
+                android:value="${bugly_appid}"/>
+        <meta-data
+                android:name="BUGLY_APPKEY"
+                android:value="${bugly_appkey}"/>
 
         <!-- Required. Enable it you can get statistics data with channel -->
         <meta-data
