--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -398,6 +398,28 @@
                   android:screenOrientation="portrait"/>
         <activity android:name=".ui.grade.MaterialFragmentActivity"
                   android:screenOrientation="portrait"/>
+
+        <activity android:name=".ui.common.PlayActivity"
+                  android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
+                  android:launchMode="singleTop"
+                  android:theme="@style/PlayerVideoTheme"
+                >
+            <intent-filter>
+                <action android:name="cn.xiaojs.xma.player.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:scheme="http"/>
+                <data android:scheme="https"/>
+                <data android:scheme="content"/>
+                <data android:scheme="asset"/>
+                <data android:scheme="file"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="cn.xiaojs.xma.player.action.VIEW_LIST"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
+
         <!-- QQ -->
         <activity
                 android:name="com.tencent.tauth.AuthActivity"
