--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.meituan.android.walle:plugin:1.0.5'
-
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         //bugly符号表
         classpath 'com.tencent.bugly:symtabfileuploader:latest.release'
 
@@ -21,6 +19,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+
+        maven {
+            url "https://dl.google.com/dl/Android/maven2/"
+        }
+
     }
 }
 
