--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,10 @@ dependencies {
 
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
-    compile('io.socket:socket.io-client:0.8.3') {
+    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    compile ('io.socket:socket.io-client:0.8.3') {
         exclude group: 'org.json', module: 'json'
     }
 
@@ -85,8 +88,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-//    compile 'io.reactivex.rxjava2:rxjava:2.1.1'
-//    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.orhanobut:logger:1.15'
     compile 'com.umeng.analytics:analytics:latest.integration'
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
@@ -94,7 +95,7 @@ dependencies {
     compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-jackson:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+    //compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.android:flexbox:0.2.3'
     compile 'com.qiniu:happy-dns:0.2.8'
