--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,9 @@ dependencies {
     compile project(':calendar')
     compile project(':DragSortListview')
 
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.exoplayer:exoplayer:r2.5.1'
+
 
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -110,7 +112,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     //区域读图
     compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.6.0'
-
 
 
     testCompile 'junit:junit:4.12'
