--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -316,6 +316,10 @@
             android:screenOrientation="portrait"
             />
 
+        <activity android:name=".ui.lesson.MyCourseListActivity"
+            android:screenOrientation="portrait"
+            />
+
         <activity
                 android:name=".TestActivity"
                 android:screenOrientation="landscape"
