--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,6 +98,7 @@
                 android:name=".ui.MainActivity"
                 android:launchMode="singleTask"
                 android:screenOrientation="portrait"
+                android:windowSoftInputMode="adjustPan"
         >
             <intent-filter>
                 <action android:name="cn.xiaojs.xma.chatkit.chat_notification_action"/>
