--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -141,6 +141,9 @@
         <activity
                 android:name=".ui.common.ShareBeautifulQrcodeActivity"
                 android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.common.ShareQrcodeClassroomActivity"
+                android:screenOrientation="portrait"/>
 
         <activity
                 android:name=".ui.lesson.MyLessonActivity"
