--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,10 @@ task clean(type: Delete) {
 
 
 ext {
-    compileSdkVersion = 24
-    buildToolsVersion = "25.0.0"
-    targetSdkVersion = 24
+    supportLibVersion = "27.0.0"
+    compileSdkVersion = 26
+    buildToolsVersion = "26.0.2"
+    targetSdkVersion = 26
     bugly_appid = "d4347d7369"
     bugly_appkey = "eb2669e5-ee27-444b-96d3-c3b3d0d251e7"
     channel_dir = "./channel"
