--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -589,90 +589,6 @@
                 android:exported="false">
         </service>
 
-        <!-- JPush -->
-        <!-- Required SDK核心功能 -->
-        <activity
-                android:name="cn.jpush.android.ui.PushActivity"
-                android:configChanges="orientation|keyboardHidden"
-                android:exported="false"
-                android:theme="@android:style/Theme.NoTitleBar">
-            <intent-filter>
-                <action android:name="cn.jpush.android.ui.PushActivity"/>
-
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="cn.xiaojs.xma"/>
-            </intent-filter>
-        </activity>
-        <!-- Required SDK 核心功能 -->
-        <!-- 可配置android:process参数将PushService放在其他进程中 -->
-        <service
-                android:name="cn.jpush.android.service.PushService"
-                android:process=":mult">
-            <intent-filter>
-                <action android:name="cn.jpush.android.intent.REGISTER"/>
-                <action android:name="cn.jpush.android.intent.REPORT"/>
-                <action android:name="cn.jpush.android.intent.PushService"/>
-                <action android:name="cn.jpush.android.intent.PUSH_TIME"/>
-            </intent-filter>
-        </service>
-
-        <!-- since 1.8.0 option 可选项。用于同一设备中不同应用的JPush服务相互拉起的功能。 -->
-        <!-- 若不启用该功能可删除该组件，将不拉起其他应用也不能被其他应用拉起 -->
-        <service
-                android:name="cn.jpush.android.service.DaemonService"
-                android:enabled="true"
-                android:exported="true">
-            <intent-filter>
-                <action android:name="cn.jpush.android.intent.DaemonService"/>
-
-                <category android:name="cn.xiaojs.xma"/>
-            </intent-filter>
-        </service>
-
-        <!-- Required SDK核心功能 -->
-        <receiver
-                android:name="cn.jpush.android.service.PushReceiver"
-                android:enabled="true">
-            <intent-filter android:priority="1000">
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY"/> <!-- Required  显示通知栏 -->
-                <category android:name="cn.xiaojs.xma"/>
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.USER_PRESENT"/>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
-            </intent-filter>
-            <!-- Optional -->
-            <intent-filter>
-                <action android:name="android.intent.action.PACKAGE_ADDED"/>
-                <action android:name="android.intent.action.PACKAGE_REMOVED"/>
-
-                <data android:scheme="package"/>
-            </intent-filter>
-        </receiver>
-
-        <!-- Required Push SDK核心功能 -->
-        <service
-                android:name="cn.jpush.android.service.DownloadService"
-                android:enabled="true"
-                android:exported="false"/>
-        <!-- Required Push SDK核心功能 -->
-        <receiver android:name="cn.jpush.android.service.AlarmReceiver"/>
-
-        <!-- User defined.  For test only  用户自定义的广播接收器 -->
-        <receiver
-                android:name=".service.JPushReceiver"
-                android:enabled="true"
-                android:exported="false">
-            <intent-filter>
-                <action android:name="cn.jpush.android.intent.REGISTRATION"/> <!-- Required  用户注册SDK的intent -->
-                <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED"/> <!-- Required  用户接收SDK消息的intent -->
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED"/> <!-- Required  用户接收SDK通知栏信息的intent -->
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED"/> <!-- Required  用户打开自定义通知栏的intent -->
-                <action android:name="cn.jpush.android.intent.CONNECTION"/> <!-- 接收网络变化 连接/断开 since 1.6.3 -->
-                <category android:name="cn.xiaojs.xma"/>
-            </intent-filter>
-        </receiver>
-
         <!-- bugly-->
         <meta-data
                 android:name="BUGLY_APPID"
@@ -681,14 +597,6 @@
                 android:name="BUGLY_APPKEY"
                 android:value="${bugly_appkey}"/>
 
-        <!-- Required. Enable it you can get statistics data with channel -->
-        <meta-data
-                android:name="JPUSH_CHANNEL"
-                android:value="developer-default"/>
-        <!-- Required. AppKey copied from Portal -->
-        <meta-data
-                android:name="JPUSH_APPKEY"
-                android:value="e87cffb332432eec3c0807ba"/>
 
         <activity android:name=".ui.message.ChooseClassActivity">
         </activity>
@@ -710,6 +618,15 @@
                 android:name=".wxapi.WXEntryActivity"
                 android:label="@string/app_name"
                 android:exported="true"
+                />
+
+
+        <!--jpush -->
+        <provider
+                android:authorities="cn.xiaojs.xma.DataProvider"
+                android:name="cn.jpush.android.service.DataProvider"
+                android:exported="false"
+                tools:node="replace"
                 />
 
     </application>
