--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,6 @@ ext {
     bugly_appkey = "eb2669e5-ee27-444b-96d3-c3b3d0d251e7"
     channel_dir = "./channel"
     release_name_format = 'xiaojs_${buildType}_${channel}_v${versionName}_${versionCode}.apk'
+    jpush_appkey = "e87cffb332432eec3c0807ba"
+    jpush_channel = "developer-default"
 }
